--- a/test2.html
+++ b/test2.html
@@ -10,7 +10,7 @@
   /* Additional CSS if needed */
   .scrollable-menu {
     overflow-y: auto;
-    max-height: 200px; /* Adjust based on the design */
+    max-height: 300px; /* Adjust based on the design */
   }
   .fixed-top {
     position: fixed;
@@ -40,7 +40,7 @@
   }
 </style>
 </head>
-<body class="bg-white font-roboto">
+<body class="bg-white font-roboto; display : block ">
   <header class="fixed-top bg-white shadow-md">
     <div class="flex justify-between items-center p-4">
       <span class="banner-title text-xl">DU car_pool</span>
@@ -50,45 +50,48 @@
         <button class="px-4 py-2 bg-green-500 text-white rounded">join</button>
       </div>
     </div>
-    <div class="bg-gray-100 p-4">
-      <!-- Advertisement placeholder -->
-    </div>
   </header>
 
-  <main class="pt-24 pb-20">
+  <main class="pt-72 pb-20">
     <section class="scrollable-menu p-4">
       <!-- Scrollable menu items -->
+        <div style = "float:right; color: gray;">only [car_pool / taxi] </div>
+      <div>.</div>
       <div class="list-item">
-        <span>car</span>
-        <span>목적지</span>
-        <span>9:30 - 10:00</span>
+        <div style ="width : 50%; float: left;">9 : 30 - 10 : 00</div>
+        <div style = "width : 30%; float: left;" >영대</div>
+        <div style= "width : 5%; float: right;">car</div>
       </div>
       <div class="list-item">
-        <span>car</span>
-        <span>목적지</span>
-        <span>9:30 - 10:00</span>
+        <div style ="width : 50%; float: left;">9 : 40 - 10 : 00</div>
+        <div style = "width : 30%; float: left;" >하양</div>
+        <div style= "width : 5%; float: right;">car</div>
       </div>
       <div class="list-item">
-        <span>car</span>
-        <span>목적지</span>
-        <span>9:30 - 10:00</span>
+        <div style ="width : 50%; float: left;">9 : 45 - 9 : 50</div>
+        <div style = "width : 30%; float: left;" >동성로</div>
+        <div style= "width : 5%; float: right;">taxi</div>
       </div>
       <div class="list-item">
-        <span>car</span>
-        <span>목적지</span>
-        <span>9:30 - 10:00</span>
+        <div style ="width : 50%; float: left;">10 : 00 - 10 : 30</div>
+        <div style = "width : 30%; float: left;" >경일대</div>
+        <div style= "width : 5%; float: right;">taxi</div>
       </div>
       <div class="list-item">
-        <span>car</span>
-        <span>목적지</span>
-        <span>9:30 - 10:00</span>
+        <div style ="width : 50%; float: left;">10 : 00 - 10 : 40</div>
+        <div style = "width : 30%; float: left;" >대가대</div>
+        <div style= "width : 5%; float: right;">car</div>
       </div>
       
       <!-- Repeat for each item -->
     </section>
 
     <section class="flex justify-between p-4">
-      <button class="flex-1 mr-2 bg-gray-200 p-4 text-center">car_pool</button>
+        <button class="flex-1 mr-2 bg-gray-200 p-4">
+          <img src ="Car.jpeg" style ="width : 100%">
+          <p style = "font-size: 15px;">car_pool</p>
+        </button>
+      
       <button class="flex-1 ml-2 bg-gray-200 p-4 text-center">taxi</button>
     </section>
   </main>
