--- a/mapapi_test.html
+++ b/mapapi_test.html
@@ -4,95 +4,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototype</title>
-    <link href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>DU Car Pool</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        .sticky-top {
-            position: sticky;
-            top: 0;
-            z-index: 10;
-            background: white;
-        }
-
-        .sticky-bottom {
-            position: sticky;
-            bottom: 0;
-            z-index: 10;
-            background: white;
-        }
-
+        /* Additional CSS if needed */
         .scrollable-menu {
             overflow-y: auto;
             max-height: 300px;
+            /* Adjust based on the design */
         }
 
-        .photo-button {
-            background-size: cover;
-            background-position: center;
+        .fixed-top {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 10;
+        }
+
+        .fixed-bottom {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            z-index: 10;
+        }
+
+        .icon-button {
+            width: 100px;
+            height: 100px;
+        }
+
+        .banner-title {
+            font-weight: 700;
+        }
+
+        .list-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border-bottom: 1px solid #ddd;
+            padding: 10px;
         }
     </style>
 </head>
 
-<body class="bg-gray-100">
-
-    <div class="sticky-top flex justify-between items-center px-4 py-2 shadow-md">
-        <div class="flex space-x-2">
-            <button class="bg-blue-500 text-white px-3 py-1 rounded">DU car_pool</button>
-            <button class="bg-blue-500 text-white px-3 py-1 rounded">login / join</button>
-        </div>
-        <div>I'll use it as an advertisement window later</div>
-    </div>
-
-    <div class="api_test_box container mx-auto px-5 py-6">
-        <div class="api_ground bg-white p-4 my-4 rounded shadow-lg">
-            <div id="map" style="width:100%;height:350px;"></div>
-            <script type="text/javascript"
-                src="//dapi.kakao.com/v2/maps/sdk.js?appkey=236568aeb3b812fccb1bc92148683a54"></script>
-            <script>
-                var mapContainer = document.getElementById('map'),
-                    // 지도를 표시할 div 
-                    mapOption = {
-                        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-                        level: 3 // 지도의 확대 레벨
-                    };
-
-                // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
-                var map = new kakao.maps.Map(mapContainer, mapOption); 
-            </script>
-        </div>
-    </div>
-    </div>
-
-    <div class="container mx-auto px-4 py-2">
-        <div class="scrollable-menu bg-white p-4 my-4 rounded shadow-lg">
-            <div class="flex flex-col space-y-4">
-                <div class="bg-gray-200 p-4 rounded">car 목적지 9 : 30 - 10 : 00</div>
-                <div class="bg-gray-200 p-4 rounded">car 목적지 9 : 30 - 10 : 00</div>
-                <div class="bg-gray-200 p-4 rounded">car 목적지 9 : 30 - 10 : 00</div>
-                <div class="bg-gray-200 p-4 rounded">car 목적지 9 : 30 - 10 : 00</div>
+<body class="bg-white font-roboto; display : block ">
+    <div>
+        <header class="fixed-top bg-white shadow-md">
+            <div class="flex justify-between items-center p-4">
+                <span class="banner-title text-xl">DU car_pool</span>
+                <div class="flex items-center">
+                    <button class="px-4 py-2 bg-blue-500 text-white rounded mr-2">login</button>
+                    <button class="px-4 py-2 bg-green-500 text-white rounded">join</button>
+                    <button class="px-4 py-2 ml-4 bg-gray-200">---</button>
+                </div>
             </div>
-        </div>
+        </header>
+    </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <div class="photo-button" style="background-image: url('https://source.unsplash.com/random/400x300');">
-                <button class="w-full h-full"></button>
-                <p class="text-center">car_pool</p>
-            </div>
-            <div class="photo-button" style="background-image: url('https://source.unsplash.com/random/400x300');">
-                <button class="w-full h-full"></button>
-                <p class="text-center">taxi</p>
-            </div>
+    <div class="checkbox_container mt-20"
+        style="display: block; border: 1px solid rgb(121, 113, 113); padding: 10px; width:95%; margin-left: auto; margin-right: auto;">
+        나의 예약<br>
+        <div>
+            <input type='checkbox' name='gender' value='female' style="margin-right: 5px;" />신청시간
+            <br>
+            <input type='checkbox' name='gender' value='male' style="margin-right: 5px;" />예약시간
         </div>
     </div>
 
-    <div class="sticky-bottom flex justify-around items-center px-4 py-2 shadow-md">
-        <button class="bg-blue-500 text-white px-3 py-1 rounded">home</button>
-        <button class="bg-blue-500 text-white px-3 py-1 rounded">chat</button>
-        <button class="bg-blue-500 text-white px-3 py-1 rounded">community</button>
     </div>
+
+
+    <main class="pb-20">
+        <div style="color: gray; margin-top:10px; margin-right:20px; text-align:right;">only [car_pool / taxi] </div>
+        <section class="scrollable-menu p-4">
+            <!-- Scrollable menu items -->
+            <div class="list-item">
+                <div style="width : 50%; float: left;">9 : 30 - 10 : 00</div>
+                <div style="width : 30%; float: left;">영대</div>
+                <div style="width : 5%; float: right;">car</div>
+            </div>
+            <div class="list-item">
+                <div style="width : 50%; float: left;">9 : 40 - 10 : 00</div>
+                <div style="width : 30%; float: left;">하양</div>
+                <div style="width : 5%; float: right;">car</div>
+            </div>
+            <div class="list-item">
+                <div style="width : 50%; float: left;">9 : 45 - 9 : 50</div>
+                <div style="width : 30%; float: left;">동성로</div>
+                <div style="width : 5%; float: right;">taxi</div>
+            </div>
+            <div class="list-item">
+                <div style="width : 50%; float: left;">10 : 00 - 10 : 30</div>
+                <div style="width : 30%; float: left;">경일대</div>
+                <div style="width : 5%; float: right;">taxi</div>
+            </div>
+            <div class="list-item">
+                <div style="width : 50%; float: left;">10 : 00 - 10 : 40</div>
+                <div style="width : 30%; float: left;">대가대</div>
+                <div style="width : 5%; float: right;">car</div>
+            </div>
+            <div class="list-item">
+                <div style="width : 50%; float: left;">10 : 00 - 10 : 40</div>
+                <div style="width : 30%; float: left;">대가대</div>
+                <div style="width : 5%; float: right;">car</div>
+            </div>
+            <div class="list-item">
+                <div style="width : 50%; float: left;">10 : 00 - 10 : 40</div>
+                <div style="width : 30%; float: left;">대가대</div>
+                <div style="width : 5%; float: right;">car</div>
+            </div>
+
+            <!-- Repeat for each item -->
+        </section>
+
+        <section class="flex justify-between p-4">
+            <button class="flex-1 mr-2 bg-gray-200 p-4">
+                <img src="Car.jpeg" style="width : 100%">
+                <p style="font-size: 15px;">car_pool</p>
+            </button>
+
+            <button class="flex-1 ml-2 bg-gray-200 p-4 text-center">taxi</button>
+        </section>
+    </main>
+
+    <footer class="fixed-bottom bg-white shadow-inner">
+        <div class="flex justify-around items-center p-4">
+            <button class="text-center">home</button>
+            <button class="text-center">chat</button>
+            <button class="text-center">community</button>
+        </div>
+    </footer>
 
     <script>
-  // Implement any additional JavaScript if needed
+  // JavaScript if needed
     </script>
 </body>
 
