--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DU Car Pool</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="modal.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Additional CSS if needed */
@@ -45,6 +46,102 @@
             border-bottom: 1px solid #ddd;
             padding: 10px;
         }
+
+        /*모달 css*/
+        #modal.modal-overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background: rgba(255, 255, 255, 0.25);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(1.5px);
+            -webkit-backdrop-filter: blur(1.5px);
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.18);
+        }
+
+        #modal .modal-window {
+            background: rgba(255, 255, 255, 1);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(13.5px);
+            -webkit-backdrop-filter: blur(13.5px);
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            width: 400px;
+            height: 500px;
+            position: absolute;
+            top: 100px;
+            padding: 10px;
+        }
+
+        #modal .title {
+            padding-left: 10px;
+            display: inline;
+
+            color: black;
+
+        }
+
+        #modal .title h2 {
+            display: inline;
+        }
+
+        #modal .close-area {
+            display: inline;
+            float: right;
+            padding-right: 10px;
+            cursor: pointer;
+
+            color: black;
+        }
+
+        #modal .content {
+            margin-top: 20px;
+            padding: 0px 10px;
+
+            color: black;
+        }
+
+        /*로그인 css*/
+        .login-wrapper {
+            width: 400px;
+            height: 350px;
+            padding: 40px;
+            box-sizing: border-box;
+        }
+
+        .login-wrapper>h2 {
+            font-size: 24px;
+            color: #0aeb4e;
+            margin-bottom: 20px;
+        }
+
+        #login-form>input {
+            width: 100%;
+            height: 48px;
+            padding: 0 10px;
+            box-sizing: border-box;
+            margin-bottom: 16px;
+            border-radius: 6px;
+            background-color: #F8F8F8;
+        }
+
+        #login-form>input::placeholder {
+            color: #D2D2D2;
+        }
+
+        #login-form>input[type="submit"] {
+            color: #fff;
+            font-size: 16px;
+            background-color: #0aeb4e;
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -53,8 +150,73 @@
         <header class="fixed-top bg-white shadow-md">
             <div class="flex justify-between items-center p-4">
                 <span class="banner-title text-xl">DU car_pool</span>
-                <div class="flex items-center">
-                    <button class="px-4 py-2 bg-blue-500 text-white rounded mr-2">login</button>
+                <div id="container" class="flex items-center">
+                    <button class="px-4 py-2 bg-blue-500 text-white rounded mr-2" id="btn-modal">login</button>
+                    <!-- ... (Your existing HTML code) ... -->
+                    <div id="modal" class="modal-overlay">
+                        <div class="modal-window">
+                            <div class="title">
+                                <h2>login</h2>
+                            </div>
+                            <div class="close-area">X</div>
+                            <div class="content">
+                                <div class="login-wrapper">
+                                    <h2>Login</h2>
+
+                                    <method="post" action="서버의url" id="login-form">
+                                        <input type="text" name="userName" placeholder="Email">
+                                        <br>
+                                        <input type="password" name="userPassword" placeholder="Password">
+                                        <br>
+                                        <label for="remember-check">
+                                            <input type="checkbox" id="remember-check">아이디 저장하기
+                                        </label>
+                                        <input type="submit" value="Login">
+                                        </method=>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <script>
+                        // ... (Your existing JavaScript code) ...
+                        const loremIpsum = document.getElementById("lorem-ipsum")
+                        fetch("index.html")
+                            .then(response => response.text())
+                            .then(result => loremIpsum.innerHTML = result)
+                        const modal = document.getElementById("modal")
+                        function modalOn() {
+                            modal.style.display = "flex"
+                        }
+                        function isModalOn() {
+                            return modal.style.display === "flex"
+                        }
+                        function modalOff() {
+                            modal.style.display = "none"
+                        }
+                        const btnModal = document.getElementById("btn-modal")
+                        btnModal.addEventListener("click", e => {
+                            modalOn()
+                        })
+                        const closeBtn = modal.querySelector(".close-area")
+                        closeBtn.addEventListener("click", e => {
+                            modalOff()
+                        })
+                        modal.addEventListener("click", e => {
+                            const evTarget = e.target
+                            if (evTarget.classList.contains("modal-overlay")) {
+                                modalOff()
+                            }
+                        })
+                        window.addEventListener("keyup", e => {
+                            if (isModalOn() && e.key === "Escape") {
+                                modalOff()
+                            }
+                        })
+                        const joinBtn = document.getElementById("btn-modal");
+                        joinBtn.addEventListener("click", e => {
+                            modalOn();
+                        });
+                    </script>
                     <button class="px-4 py-2 bg-green-500 text-white rounded">join</button>
                     <button class="px-4 py-2 ml-4 bg-gray-200">---</button>
                 </div>
